--- a/1.3 IntroToNET_CastingParsingEnums/1.3 IntroToNET_CastingParsingEnums.csproj
+++ b/1.3 IntroToNET_CastingParsingEnums/1.3 IntroToNET_CastingParsingEnums.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net9.0</TargetFramework>
-        <RootNamespace>_1._3_MoreIntroToNET</RootNamespace>
+        <RootNamespace>_1._3_IntroToNET_CastingParsingEnums</RootNamespace>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
